testsuite/tests/typecheck/should_fail/T12563.stderr

T12563.hs:7:15: error:
    • Cannot instantiate unification variable ‘p0’
      with a type involving polytypes: (forall a. f0 a) -> f0 r0
        GHC doesn't yet support impredicative polymorphism
    • In the first argument of ‘foo’, namely ‘g’
      In the expression: foo g
      In the expression: \ g -> foo g
    • Relevant bindings include
        g :: p0 (bound at T12563.hs:7:6)
        x :: p0 -> f0 r0 (bound at T12563.hs:7:1)
